Archive2/b2/2dbb40e04f3af0/output
main.cpp:14:11: error: declaration type contains unexpanded parameter pack 'I'
    using type = typename Concat<T,
          ^
1 error generated.
